--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "h-project-client",
-  "version": "0.0.0",
+  "name": "habemus-project-client",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,6 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "superagent": "^2.3.0",
-    "xhr-upload": "0.0.0"
+    "xhr-upload": "^1.0.0"
   }
 }
